<resources>
    <string name="recebeu_click_longo">" long click!"</string>

    <string name="nova_viagem">New trip</string>
    <string name="alterar_viagem">Edit trip</string>

    <string name="app_name">Trip Management Budget</string>
    <string name="lblCodigo">Code</string>
    <string name="lblDataInicial">Trip initial date</string>
    <string name="lblDataFinal">Trip end date</string>
    <string name="lblDestino">Destiny</string>
    <string name="lblKmInicial">Initial mileage</string>
    <string name="lblKmFinal">End mileage</string>
    <string name="lblIniciarViagem">Start trip</string>
    <string name="lblFinalizarViagem">End trip</string>
    <string name="lblAdicionarDespesa">Add expense</string>
    <string name="lblViagemTrabalho">Work</string>
    <string name="lblPessoal">Personal</string>
    <string name="lblLazer">Recreation</string>
    <string name="lblReembolsar">Refund</string>
    <string name="lblLimparForm">Clear form</string>
    <string name="lblSelecioneTipoVeiculo">Vehicle type</string>

    <!-- Validações de campos -->
    <string name="lblDestino_mandatory">Destiny is mandatory</string>
    <string name="lblKmInicial_mandatory">Initial mileage is mandatory</string>
    <string name="lblKmFinal_mandatory">Final mileage is mandatory</string>
    <string name="lblTipoViagem_mandatory">Type of trip is mandatory</string>
    <string name="spinnerTipo_mandatory">Type of vehicle is mandatory</string>

    <string name="selecione">Selecione...</string>
    <string name="particular">Particular</string>
    <string name="alugado">Rented</string>
    <string name="emprestado">Borrowed</string>
    <string name="uber" translatable="false">Uber</string>
    <string name="lblTipoViagem">Trip type</string>

    <!-- Lista de Destinos -->
    <string name="foz_do_iguacu" translatable="false">Foz do Iguaçu</string>
    <string name="blumenau" translatable="false">Blumenau</string>
    <string name="cascavel" translatable="false">Cascavel</string>
    <string name="curitiba" translatable="false">Curitiba</string>
    <string name="maceio" translatable="false">Maceió</string>
    <string name="londres" translatable="false">Londres</string>
    <string name="pato_branco" translatable="false">Pato Branco</string>
    <string name="medianeira" translatable="false">Medianeira</string>
    <string name="toledo" translatable="false">Toledo</string>
    <string name="maringa" translatable="false">Maringá</string>
    <string name="lblDescricaoApp">This app is awesome and you can control yours expensives during you trip! Enjoy!!</string>
    <string name="lblNomeAluno">Student name:</string>
    <string name="lblCurso">Course:</string>
    <string name="lblEmail" translatable="false">Email:</string>
    <string name="lblRodrigo" translatable="false">RODRIGO TRENTIN ROSSI</string>
    <string name="lblEspecializacao">JAVA SPECIALIZATION</string>
    <string name="lblRdrg" translatable="false">rdrg.rossi@gmail.com</string>
    <string name="lblSobre">About</string>
    <string name="lblSalvar">Save</string>
    <string name="lblAdicionar">Add</string>
    <string name="lblEditar">Edit</string>
    <string name="lblExcluir">Delete</string>
    <string name="lblOrdenacao">Order</string>
    <string name="lblAscendente">Upward</string>
    <string name="lblDescendente">Downward</string>
    <string name="recebeu_click">" short click!"</string>
    <string name="lblViagema">Trip to</string>
    <string name="lblIniciadaUsando">started using a vehicle</string>
</resources>