<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="34dp"
        android:text="@string/lblDataInicial"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editDataInicio"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:enabled="false"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:text="@string/lblDataFinal"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <EditText
        android:id="@+id/editDataFinal"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:enabled="false"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/lblDestino"
        app:layout_constraintStart_toStartOf="@+id/editDataInicio"
        app:layout_constraintTop_toBottomOf="@+id/editDataInicio" />

    <EditText
        android:id="@+id/editDestino"
        android:layout_width="323dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/editDataFinal"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/lblKmInicial"
        app:layout_constraintStart_toStartOf="@+id/editDestino"
        app:layout_constraintTop_toBottomOf="@+id/editDestino" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/lblKmFinal"
        app:layout_constraintStart_toStartOf="@+id/editKmFinal"
        app:layout_constraintTop_toBottomOf="@+id/editDestino" />

    <EditText
        android:id="@+id/editKmInicial"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/editKmFinal"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/editDestino"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/btnIniciarViagem"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:backgroundTint="?attr/colorPrimaryDark"
        android:onClick="iniciarViagem"
        android:text="@string/lblIniciarViagem"
        app:layout_constraintEnd_toEndOf="@+id/radioGroupTipoViagem"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/spinner"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <Button
        android:id="@+id/btnFinalizarViagem"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:backgroundTint="@android:color/holo_red_light"
        android:enabled="false"
        android:onClick="finalizarViagem"
        android:text="@string/lblFinalizarViagem"
        app:layout_constraintEnd_toEndOf="@+id/spinner"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <RadioGroup
        android:id="@+id/radioGroupTipoViagem"
        android:layout_width="141dp"
        android:layout_height="99dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/editKmInicial"
        app:layout_constraintStart_toStartOf="@+id/editKmInicial"
        app:layout_constraintTop_toBottomOf="@+id/editKmInicial">

        <RadioButton
            android:id="@+id/radioButtonTrabalho"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblViagemTrabalho" />

        <RadioButton
            android:id="@+id/radioButtonPessoal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblPessoal" />

        <RadioButton
            android:id="@+id/radioButtonLazer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblLazer" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/checkBoxReembolsar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/lblReembolsar"
        app:layout_constraintStart_toStartOf="@+id/editKmFinal"
        app:layout_constraintTop_toBottomOf="@+id/editKmFinal" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="323dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="@+id/radioGroupTipoViagem"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupTipoViagem" />

    <Button
        android:id="@+id/btnLimparForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="limparFormulario"
        android:text="@string/lblLimparForm"
        app:layout_constraintEnd_toEndOf="@+id/spinner"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@+id/spinner"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

</androidx.constraintlayout.widget.ConstraintLayout>